--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.4",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.6.0",
     "nodemon": "^3.0.1",
     "prisma": "^5.3.0",
